# VulkanRT-Educational

./: .gitignore  .gitmodules  readme.md  vulkan_rt_übung.docx  vulkan_rt_übung_tipps.txt
vulkanrt/: CMakeLists.txt  LocalDefines.in  SpirvCompiler.hpp
vulkanrt/base/: DataPath.h  DataPath.h.in  VulkanRaytracingSample.h  VulkanTools.cpp  vulkanexamplebase.cpp  vulkanexamplebase.h
vulkanrt/vulkanrt-exercise1/: CMakeLists.txt  exercise1.cpp
vulkanrt/vulkanrt-exercise1/shaders/: closesthit.rchit  shadow.rmiss
vulkanrt/vulkanrt-exercise2/: CMakeLists.txt  exercise2.cpp
vulkanrt/vulkanrt-exercise2/shaders/: raygen.rgen
vulkanrt/vulkanrt-reference/: CMakeLists.txt  reference.cpp
vulkanrt/vulkanrt-solution1/: CMakeLists.txt  solution1.cpp
vulkanrt/vulkanrt-solution1/shaders/: closesthit.rchit
vulkanrt/vulkanrt-solution2/: CMakeLists.txt  solution2.cpp
vulkanrt/vulkanrt-solution2/shaders/: closesthit.rchit  raygen.rgen
